# 17-630_prompt_engineering_final_project

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: analyze.py  examples.py  fact_check.py  health.py  shared.py
backend/app/core/: __init__.py  logging.py  settings.py
backend/app/pipeline/: __init__.py  base.py  claim_extractor.py  correction_rewriter.py  evidence_reranker.py  evidence_retriever.py  orchestrator.py  prompt_manager.py  prompts.py  query_generator.py  rewrite_generator.py  verdict_classifier.py  verifier.py
backend/app/pipeline/prompt_templates/: claim_extractor.system.md  claim_extractor.user.md  correction_rewriter.system.md  correction_rewriter.user.md  query_generator.system.md  query_generator.user.md  verifier.system.md  verifier.user.md
backend/app/providers/: __init__.py  base.py  factory.py  mock.py  openai.py
backend/app/retrieval/: __init__.py  corpus.py  embedder.py  faiss_index.py
backend/app/schemas/: __init__.py  claims.py  common.py  contracts.py  correction.py  evidence.py  pipeline.py  verification.py
backend/app/services/: examples.py  fact_check.py  retrieval_service.py
backend/app/utils/: experiment_io.py  ids.py  json_schema.py  text.py
backend/configs/: pipeline.default.yaml
backend/retrieval/: __init__.py  chunking.py  index_store.py  loaders.py  reranker.py  retriever.py
docs/: architecture.md  demo_script.md  evaluation.md  failure_analysis.md  prompt_design.md  (+4 more)
(+81 files in other folders)
